# apf-fastapi-building-blocks

./: README.md  pyproject.toml
01-user-registeration/: main.py
01-user-registeration/controllers/: index.py
01-user-registeration/models/: index.py
01-user-registeration/routes/: index.py
01-user-registeration/utils/: hash_passkey.py
02-product-search/: main.py
02-product-search/assets/: products.json
02-product-search/controllers/: index.py
02-product-search/routes/: index.py
03-payment-processing/controllers/: index.py
03-payment-processing/models/: index.py
03-payment-processing/routes/: index.py
04-vehicle-inventory/: controllers.py  main.py  routes.py  vehicles.json
05-flight-booking/: main.py
05-flight-booking/models/: index.py
05-flight-booking/routes/: index.py
06-event-booking/: controllers.py  main.py  models.py  routes.py
